# KyroSpades

./: Build KS Win Linux Mac Android.yml  Build KS-Beta.yml  CMakeLists.txt  README.md  build_android.sh  build_ios.sh  config.ini  package_android_assets.sh
.github/workflows/: BETA.yml  Build KS Win Linux Mac Android.yml  Build KS Win Linux Mac.yml  Build KS Win Mac Linux.yml  Build KS-Beta.yml  Build KyroSpades Windows & Linux.yml  Build KyroSpades Windows.yml  DEFAULT.yml  build.yml
android/: .gitignore  README.md  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/kyrospades/: KyroSpadesActivity.java  MainActivity.java
android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java
android/app/src/main/res/values/: strings.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: file_paths.xml
android/gradle/wrapper/: gradle-wrapper.properties
cmake/: bundle_libraries.sh
ios/: Info.plist  README.md  ios.toolchain.cmake  make_icons.sh
src/: CMakeLists.txt  camera.c  cameracontroller.c  channel.c  chathistory.c  chathistory.h  chatlog.c  chatlog.h  chunk.c  chunk.h  common.h  config.c  config.h  demo.c  demo.h  entitysystem.c  file.c  file.h  font.c  gles_immediate_stubs.h  glx.c  glx.h  hashtable.c  hashtable.h  http.h  hud.c  hud.h  list.c  main.c  main.h  map.c  map.h  matrix.c  microui.c  microui.h  model.c  model.h  network.c  network.h  particle.c  (+17 more)
